--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,34 @@
     "version": 2,
     "builds": [
         {
-            "src": "api/**/*.js",
+            "src": "app/**/*.ts",
             "use": "@vercel/node"
+        },
+        {
+            "src": "public/**/*",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/api/$1"
+            "dest": "/app/api/$1"
+        },
+        {
+            "src": "/signin",
+            "dest": "/app/signin"
+        },
+        {
+            "src": "/signup",
+            "dest": "/app/signup"
+        },
+        {
+            "src": "/user/(.*)",
+            "dest": "/app/user/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/app/page"
         }
     ]
 }
