--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,22 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "app/**/*.ts",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "public/**/*",
-            "use": "@vercel/static"
-        }
+      {
+        "src": "next.config.mjs",
+        "use": "@vercel/next"
+      }
     ],
     "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/app/api/$1"
-        },
-        {
-            "src": "/signin",
-            "dest": "/app/signin"
-        },
-        {
-            "src": "/signup",
-            "dest": "/app/signup"
-        },
-        {
-            "src": "/user/(.*)",
-            "dest": "/app/user/$1"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/app/page"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "/$1"
+      }
+    ],
+    "functions": {
+      "api/**/*.js": {
+        "memory": 1024,
+        "maxDuration": 10
+      }
+    }
+  }
+  
